css/initial.css
/* ... */
/*  Date ranges.

    These should also move as a block, just like inflation adjustments. Also,
    the en-dash should be v-positioned as one normally would be, for clarity.
 */
span.date-range {
    white-space: nowrap;
    font-variant-numeric: oldstyle-nums;
}
/* Unless in a link, for the usual reasons: */
a span.date-range {
    font-variant-numeric: tabular-nums;
}
span.date-range .subsup {
    align-items: center;
    bottom: 0;
    margin: -0.5em 0.05em 0 0.1em;
}
span.date-range .subsup sup {
    font-size: 1em;
    top: 0.45em;
}
span.date-range .subsup sub {
    bottom: -0.25em;
}
span.date-range > sub {
    margin: 0 0.1em;
    bottom: 0;
}

/*  Hide date range metadata on mobile (just display like normal).
 */
@media all and (max-width: 649px) {
    span.date-range sub {
        display: none;
    }
    span.date-range .subsup {
        margin: 0;
    }
    span.date-range .subsup sup {
        top: -0.15em;
    }
}

/*	Small caps blocks.
 */
p.smallcaps {
	font-variant-caps: small-caps;
}

/*  Auto-smallcaps introductory paragraphs of documents or sub-documents.
    (This is also where dropcaps appear.)
 */
p.intro-graf::first-line {
    font-variant-caps: small-caps;
}

.smallcaps-not > p.intro-graf::first-line {
    font-variant-caps: unset;
}

/*  Enable standard Pandoc attribute-based syntax for small-caps like
    ‘[foo]{.smallcaps}’; see https://pandoc.org/MANUAL.html#small-caps
 */
span.smallcaps {
    font-variant-caps: small-caps;
}

/*  Hide date range metadata on /index.
 */
body.page-index span.date-range sub {
    display: none;
}
body.page-index span.date-range .subsup {
    margin: 0;
}
body.page-index span.date-range .subsup sup {
    top: -0.15em;
}


/*************/
/* SIDENOTES */
/*************/

/*  Hide sidenote columns on narrow viewports.
    */
@media all and (max-width: 1760px) {
	#sidenote-column-left,
    #sidenote-column-right {
        display: none;
    }
}

/*=--------------=*/
/*= Margin notes =*/
/*=--------------=*/

/*  On wide viewports, hide the margin notes until it is determined which layout
    form it should take (‘sidenote’ or ‘inline’).
 */
@media all and (min-width: 1497px) {
    .marginnote:not(.inline):not(.sidenote) {
        display: none;
    }
}


/*****************/
/* ACCESSIBILITY */
/*****************/
/* Provide a link which skips straight to the content bypassing the sidebar &
   metadata block; this link is positioned off-screen until <Tab>-navigated to,
   which focuses it, highlighting it in a big red block in the upper-left corner.
   Implementation & rationale from https://webaim.org/techniques/skipnav/
   Further background: https://www.w3.org/TR/WCAG20-TECHS/G1.html
 */
#skip-to-content-link  {
    padding: 0.3em 0.75em 0.4em 0.65em;
    position: absolute;
    top: -2.375em;
    left: 0;
    font-family: var(--GW-sans-serif-font-stack);
    color: var(--GW-skip-to-content-text-color);
    background-color: var(--GW-skip-to-content-background-color);
    border-color: var(--GW-skip-to-content-border-color);
    border-style: double;
    border-width: 0 3px 3px 0;
    outline: none;
    z-index: 10001;
    transition:
        top 1s ease-out;
}
#skip-to-content-link:focus {
    top: 0;
    transition:
        top 0.1s ease-in;
}


/***********/
/* CONSOLE */
/***********/

#console.hidden {
    bottom: calc(-1 * var(--GW-console-view-height));
    opacity: 0;
}


/*******************************/
/* PAGE-SPECIFIC MODIFICATIONS */
/*******************************/

/*=--------=*/
/*= /index =*/
/*=--------=*/

/*  On the index page, we hide article-related formatting, to make it
    more compact & classy.
 */
body.page-index header,
body.page-index #TOC {
    display: none;
}

/***********/
/*  Nav bar.
 */

/*  No index self-link.
 */
body.page-index #sidebar a.logo {
    pointer-events: none;
}

/*  Special nav link styling on /index.
 */
@media all and (min-width: 650px) {
    body.page-index #sidebar a {
        color: var(--GW-nav-header-link-hover-color);
    }
    body.page-index #sidebar a:hover {
        color: var(--GW-nav-header-link-color);
    }

	@media all and (min-width: 1180px) {
		body.page-index #sidebar a.logo {
			opacity: 1.0;
		}
	}
}

/*****************/
/*  Column layout.
 */

/*	Suppress bonus section in single/double-column layout.
 */
body.page-index #markdownBody #notable {
    display: none;
}
@media all and (min-width: 961px) {
    body.page-index #markdownBody,
    body.page-404 div#new-popular-notable {
        display: grid;
		grid-template-columns: 1fr 1fr;
        grid-row-gap: 0.5em;
		grid-column-gap: 2em;
	}
	body.page-index #markdownBody .abstract,
	body.page-index #markdownBody hr,
	body.page-404 div#new-popular-notable hr {
		grid-column-start: 1;
		grid-column-end: -1;
	}
	@media all and (max-width: 1760px) {
		body.page-404 div#new-popular-notable #notable {
			grid-column-start: 1;
			grid-column-end: -1;
		}
		body.page-404 div#new-popular-notable .columns ul {
			column-gap: 2em;
		}
	}
    /*  On sufficiently-wide screens, we can get 3 columns in nicely; to preserve
        the initial row being ‘meta’ blocks, we leave #notable visible
        (for a newest/popular/notable triplet)
     */
    @media all and (min-width: 1761px) {
        body.page-index #markdownBody,
	    body.page-404 div#new-popular-notable {
            grid-template-columns: 45ch 45ch 45ch;
            margin-left: -22ch;
        }
        body.page-index #markdownBody #notable {
            display: block;
        }
        body.page-index #markdownBody .abstract {
			max-width: calc(var(--GW-body-max-width) - 2 * var(--GW-body-side-padding));
            margin-left: 22ch;
        }
        body.page-index #markdownBody hr {
            margin-left: -5ch;
        }
	    body.page-404 div#new-popular-notable hr {
            margin-left: -9.5ch;
        }
    }
}
/* ... */

